# OpenGLTooLKit

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
lib/: glew32.lib  glew32d.lib  glfw3.lib  glfw3d.lib  soil2.lib  soil2d.lib
src/: fragShader.glsl  gl_func_helper.cpp  gl_func_helper.h  glad.c  main.cpp
